# plot

./: .gitignore  CMakeLists.txt  README.md
include/: dcm_loader.h  file.h  image.h  label_infs.h  plot.h  rectangle.h
qrc/: icon.qrc  icon.rc
src/: dcm_loader.cpp  file.cpp  image.cpp  label_infs.cpp  main.cpp  plot.cpp  plot.ui  rectangle.cpp
